# Mine-imator-2.0.2-Continuation-Build-Linux

./: .gitignore  CHANGELOG.md  FLATHUB_SUBMISSION.md  README.md  com.nestor_churin.MineImator.local.yml  com.nestor_churin.MineImator.yml  io.github.nestorchurin.MineImator.yml
CppGen/CppGen/: Program.cs  Shader.cs  Sprite.cs
CppProject/: AppHandler.cpp  AppHandler.hpp  CMakeLists.txt
CppProject/World/: Preview.cpp
flatpak/: com.nestor_churin.MineImator.desktop  com.nestor_churin.MineImator.metainfo.xml  com.nestor_churin.MineImator.yml  io.github.nestorchurin.MineImator.desktop  io.github.nestorchurin.MineImator.metainfo.xml  io.github.nestorchurin.MineImator.yml  mine-imator.sh
scripts/: build-linux.sh  build-native.sh
